# rtherm

./: .dockerignore  Cargo.toml  LICENSE
client/: Cargo.toml  deploy.sh
client/config/: example.toml
client/misc/: deploy.sh  rtherm.service
client/src/: config.rs  dummy.rs  main.rs  provider.rs  storage.rs  w1_therm.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
docker/: Dockerfile
provider/: Cargo.toml  README.md  deploy.sh
provider/config/: example.toml
provider/src/: config.rs  main.rs  provider.rs  w1_therm.rs
server/: .gitignore  Cargo.toml  README.md  diesel.toml
server/config/: example.toml
server/docker/: Dockerfile  build.sh  docker-compose.yml  nginx.conf
server/migrations/2024-09-16-035112_create_measurements/: down.sql  up.sql
server/src/: config.rs  db.rs  http.rs  lib.rs  main.rs  recepient.rs  schema.rs  statistics.rs  storage.rs  telegram.rs
server/static/: index.html  main.js  styles.css
