[workspace]
members = ["common", "client", "server"]
resolver = "2"

[workspace.package]
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
homepage = "https://gitlab.com/agerasev/rtherm"
repository = "https://gitlab.com/agerasev/rtherm.git"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
rtherm-common = { path = "common" }
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
