[package]
name = "rtherm-client"
version = "0.2.0"
edition = "2021"

description = "RTherm client"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["dummy", "w1_therm"]
w1_therm = []
dummy = []

[dependencies]
rtherm-common.workspace = true
futures.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
log.workspace = true
env_logger.workspace = true
