[package]
name = "rtherm-client"
version.workspace = true
edition.workspace = true

description = "RTherm client"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["dummy", "w1_therm"]
w1_therm = []
dummy = []

[dependencies]
rtherm-common.workspace = true
futures.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
toml.workspace = true
log.workspace = true
env_logger.workspace = true
