[package]
name = "rtherm-common"
version = "0.1.0"
edition = "2021"

description = "RTherm common"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
