[package]
name = "rtherm-common"
version.workspace = true
edition.workspace = true

description = "RTherm common"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
