[package]
name = "rtherm-provider"
version = "0.1.0"
edition = "2021"

description = "RTherm provider"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["w1_therm"]
w1_therm = []
dummy = []

[dependencies]
rtherm-common = { workspace = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
futures = "0.3.30"
