[package]
name = "rtherm-server"
version = "0.1.0"
edition = "2021"

description = "RTherm server"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["postgres", "telegram"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
telegram = ["teloxide"]

[dependencies]
rtherm-common.workspace = true
futures.workspace = true
tokio.workspace = true
actix-web = "4"
actix-files = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
teloxide = { version = "0.13", features = ["macros"], optional = true }
chrono = "0.4.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono"] }
