[package]
name = "rtherm-server"
version = "0.2.0"
edition = "2021"

description = "RTherm server"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["postgres", "sqlite", "telegram"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
telegram = ["frankenstein"]

[dependencies]
rtherm-common.workspace = true
futures.workspace = true
tokio.workspace = true
actix-web = "4"
actix-files = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
frankenstein = { version = "0.35", default-features = false, features = [
    "async-http-client",
], optional = true }
chrono.workspace = true
sqlx.workspace = true
log.workspace = true
env_logger.workspace = true
