[package]
name = "rtherm-server"
version.workspace = true
edition.workspace = true

description = "RTherm server"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["postgres", "sqlite", "telegram"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
telegram = ["frankenstein"]

[dependencies]
rtherm-common.workspace = true
futures.workspace = true
tokio.workspace = true
actix-web = "4"
actix-files = "0.6.2"
serde.workspace = true
serde_json = "1.0.109"
toml.workspace = true
frankenstein = { version = "0.35", default-features = false, features = [
    "async-http-client",
], optional = true }
chrono.workspace = true
sqlx.workspace = true
log.workspace = true
env_logger.workspace = true
